<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="address">Address</string>
    <string name="alias">Choose an Alias</string>
    <string name="app_name">mJeliot</string>
    <string name="availablenetworks">Available Lectures</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting…</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnectedforced">Lost connection to server</string>
    <string name="disconnecting">Disconnecting…</string>
    <string name="done">Done</string>
    <string name="lock">Lock</string>
    <string name="login">Login</string>
    <string name="loggedin">Logged in</string>
    <string name="logout">Logout</string>
    <string name="loggedout">Logged Out</string>
    <string name="newassignment">A new assignment got posted.</string>
    <string name="rescan">Update</string>
    <string name="scanning">Scanning for lectures</string>
    <string name="selectnetwork">Select a Lecture</string>
    <string name="waitforassignment">There is no assignment at the moment. Please wait for the lecturer to post a task.</string>
    <string name="waitforconnection">Connecting, please wait…</string>
    <string name="waitforresult">Waiting for result…</string>
    <string name="waitforscan">Waiting for scan to complete…</string>
    <string name="discard">Discard changes</string>
    <string name="requestattention">Request the teacher\'s attention</string>
    <string name="reallydiscard">Do you really want to discard your changes?</string>
    <string name="animationspeed">Animation Speed</string>
    <string name="step">Step</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="rewind">Rewind</string>
    <string name="goback">Return</string>
    <string name="mJeliotLogoDesc">mJeliot Logo</string>
</resources>