<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:id="@+id/remotelayout" >

    <TableRow
        android:id="@+id/remoteButtonTableRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <ImageButton
            android:id="@+id/returnToEditButton"
            android:layout_width="fill_parent"
            android:layout_weight="1" 
            android:layout_height="wrap_content"
            android:src="@drawable/goback"
            android:contentDescription="@string/goback" />
        <ImageButton
            android:id="@+id/remoteStepButton"
            android:layout_width="fill_parent"
            android:layout_weight="1" 
            android:layout_height="wrap_content"
            android:src="@drawable/playpause"
            android:contentDescription="@string/step" />
	
	    <ImageButton
	        android:id="@+id/remotePlayButton"
	        android:layout_width="fill_parent"
	        android:layout_weight="1" 
	        android:layout_height="wrap_content"
	        android:src="@drawable/play"
	        android:contentDescription="@string/play" />
	
	    <ImageButton
	        android:id="@+id/remotePauseButton"
	        android:layout_width="fill_parent"
	        android:layout_weight="1" 
	        android:layout_height="wrap_content"
	        android:src="@drawable/pause"
	        android:contentDescription="@string/pause" />
	
	    <ImageButton
	        android:id="@+id/remoteRewindButton"
	        android:layout_width="fill_parent"
	        android:layout_weight="1" 
	        android:layout_height="wrap_content"
	        android:src="@drawable/rewind"
	        android:contentDescription="@string/rewind" />

    </TableRow>
        <TableRow
        android:id="@+id/animationSpeedTableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

         <TextView
             android:id="@+id/AnimationLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/animationspeed" />
 
          <SeekBar
		      android:id="@+id/animationSpeedBar"
		      android:layout_width="match_parent"
		      android:layout_height="wrap_content"
		      android:layout_weight="1" />
    </TableRow>

</TableLayout>